# Medical-Agent

Medical-Agent-main/: .gitignore
Medical-Agent-main/backend/: pyproject.toml  start_backend.sh
Medical-Agent-main/backend/app/: main.py
Medical-Agent-main/frontend/: README.md  package-lock.json  package.json
Medical-Agent-main/frontend/app/: globals.css  layout.tsx  page.tsx
Medical-Agent-main/frontend/app/api/analyze-bill/: route.ts
Medical-Agent-main/frontend/app/api/hello/: route.ts
Medical-Agent-main/frontend/components/: analysis-results.tsx  dispute-letter-modal.tsx  grid-scan.tsx  upload-form.tsx
Medical-Agent-main/frontend/components/ui/: card.tsx
