[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "pandas",
    "pydantic",
    "streamlit",
    "uvicorn[standard]",
    "openai",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
